Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   morethanthis.html

--- a/morethanthis.html
+++ b/morethanthis.html
@@ -1,103 +1,89 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Ridge Area SDA Church</title>
+		<title>Ridge Area SDA Church - More Than This</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<style>
-			/* Inline CSS to set the background image for this page */
-			.banner {
-				background-image: url('assets/images/morethanthis.jpg');
-				background-size: cover;
-				background-position: center;
-			}
-		</style>
 	</head>
 	<body class="is-preload">
 
 		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+		<div id="page-wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">Ridge Area SDA Church</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="watchlive.html">Watch Live</a></li>
-											<li><a href="aboutus.html">About Us</a></li>
-											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
-											<li><a href="morethanthis.html">More Than This</a></li>											
-											<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-											<li><a href="buliteen.html">View Previous Bulletins</a></li>		
-											<li><a href="contactus.html">Contact Us</a></li>			
-											<li><a href="login.html">Log In</a></li> <!-- Added login link -->
-											<li><a href="register.html">Register Now</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Main -->
-					<article id="main">
-						<header>
-							<h2>More Than This</h2>
-							<p>Written By Analisa Camelia</p>
-						</header>
-						<section class="wrapper style5">
-							<div class="inner">
-								<p>Journey through the eyes of a young girl as her world crumbles around her, and witness the profound transformation of her perspective as she navigates the chaos and unraveling of a world on the brink of ruin...</p>
-							</div>
-							<div>
-								<h3>Chapters</h3>
+			<!-- Header -->
+			<header id="header" style="background-image: url('assets/images/morethanthis.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+				<h1><a href="index.html">Ridge Area SDA Church</a></h1>
+				<nav id="nav">
+					<ul>
+						<li class="special">
+							<a href="#menu" class="menuToggle"><span>Menu</span></a>
+							<div id="menu">
 								<ul>
-									<li><a href="preface.html">Preface</a></li>
-									<li><a href="chapter1.html">Chapter 1: Introduction</a></li>
-									<li><a href="chapter2.html">Chapter 2: Early History</a></li>
-									<li><a href="chapter3.html">Chapter 3: Key Figures</a></li>
-									<li><a href="chapter4.html">Chapter 4: Modern Developments</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="watchlive.html">Watch Live</a></li>
+									<li><a href="aboutus.html">About Us</a></li>
+									<li><a href="pastorscorner.html">Pastor's Corner</a></li>
+									<li><a href="morethanthis.html">More Than This</a></li>											
+									<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
+									<li><a href="buliteen.html">View Previous Bulletins</a></li>		
+									<li><a href="contactus.html">Contact Us</a></li>			
+									<li><a href="login.html">Log In</a></li> <!-- Added login link -->
+									<li><a href="register.html">Register Now</a></li>
 								</ul>
 							</div>
-						</section>
-					</article>
-				
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://www.facebook.com/ridgesdachurch" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/ridgeareasdachurch/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://www.youtube.com/@RidgeAreaSDAChurch" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-							<li><a href="mailto:theridgesda@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						</li>
+					</ul>
+				</nav>
+			</header>
 
+			<!-- Main -->
+			<article id="main">
+				<header>
+					<h2>More Than This</h2>
+					<p>Written By Analisa Camelia</p>
+				</header>
+				<section class="wrapper style5">
+					<div class="inner">
+						<p>Journey through the eyes of a young girl as her world crumbles around her, and witness the profound transformation of her perspective as she navigates the chaos and unraveling of a world on the brink of ruin...</p>
+					</div>
+					<div>
+						<h3>Chapters</h3>
+						<ul>
+							<li><a href="preface.html">Preface</a></li>
+							<li><a href="chapter1.html">Chapter 1: Introduction</a></li>
+							<li><a href="chapter2.html">Chapter 2: Early History</a></li>
+							<li><a href="chapter3.html">Chapter 3: Key Figures</a></li>
+							<li><a href="chapter4.html">Chapter 4: Modern Developments</a></li>
 						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+					</div>
+				</section>
+			</article>
+			
+			<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="https://www.facebook.com/ridgesdachurch" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/ridgeareasdachurch/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.youtube.com/@RidgeAreaSDAChurch" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+					<li><a href="mailto:theridgesda@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</footer>
 
-			</div>
+		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
