Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   morethanthis.html

--- a/morethanthis.html
+++ b/morethanthis.html
@@ -13,7 +13,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-			<header id="header" style="background-image: url('assets/images/morethanthis.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 300px;">
+			<header id="header" style="background-image: url('assets/images/morethanthis.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
 				<h1><a href="index.html">Ridge Area SDA Church</a></h1>
 				<nav id="nav">
 					<ul>
@@ -25,10 +25,10 @@
 									<li><a href="watchlive.html">Watch Live</a></li>
 									<li><a href="aboutus.html">About Us</a></li>
 									<li><a href="pastorscorner.html">Pastor's Corner</a></li>
-									<li><a href="morethanthis.html">More Than This</a></li>                                            
+									<li><a href="morethanthis.html">More Than This</a></li>											
 									<li><a href="https://adventistgiving.org/donate/ANTTRI">Online Giving</a></li>
-									<li><a href="buliteen.html">View Previous Bulletins</a></li>        
-									<li><a href="contactus.html">Contact Us</a></li>            
+									<li><a href="buliteen.html">View Previous Bulletins</a></li>		
+									<li><a href="contactus.html">Contact Us</a></li>			
 									<li><a href="login.html">Log In</a></li> <!-- Added login link -->
 									<li><a href="register.html">Register Now</a></li>
 								</ul>
@@ -36,7 +36,7 @@
 						</li>
 					</ul>
 				</nav>
-			</header>			
+			</header>
 
 			<!-- Main -->
 			<article id="main">
