--- a/morethanthis.html
+++ b/morethanthis.html
@@ -51,11 +51,11 @@
 					<div>
 						<h3>Chapters</h3>
 						<ul>
-							<li><a href="preface.html">Preface</a></li>
-							<li><a href="chapter1.html">Chapter 1: Introduction</a></li>
+							<li><a href="morethenthis/preface.html">Preface</a></li>
+							<!-- <li><a href="chapter1.html">Chapter 1: Introduction</a></li>
 							<li><a href="chapter2.html">Chapter 2: Early History</a></li>
 							<li><a href="chapter3.html">Chapter 3: Key Figures</a></li>
-							<li><a href="chapter4.html">Chapter 4: Modern Developments</a></li>
+							<li><a href="chapter4.html">Chapter 4: Modern Developments</a></li> -->
 						</ul>
 					</div>
 				</section>
