--- a/morethenthis/preface.html
+++ b/morethenthis/preface.html
@@ -76,7 +76,7 @@
                     <!-- Buttons to navigate to next chapter and TOC -->
                     <div class="button-container">
                         <a href="../morethanthis.html">Table of Contents</a>
-                        <a href="#next-chapter">Next Chapter</a>
+                        <a href="chapter1.html">Next Chapter</a>
                     </div>
                 </div>
             </section>
