Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Verse of the Week</h2>
-								<h3>Romans 15:13</h3>
-								<p>"Now may the God of hope fill you with all joy and peace in believing, that you may abound in hope by the power of the Holy Spirit." </p>
+								<h3>Proverbs 11:22</h3>
+								<p>"Like a gold ring in a pig’s snout is a beautiful woman who shows no discretion." </p>
 							</div>
 						</section>
 					</section>
