Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   morethanthis.html
	modified:   morethenthis/chapter1.html
	new file:   morethenthis/chapter1inst2.html

--- a/morethanthis.html
+++ b/morethanthis.html
@@ -52,9 +52,9 @@
 						<h3>Chapters</h3>
 						<ul>
 							<li><a href="morethenthis/preface.html">Preface</a></li>
-							<li><a href="morethenthis/chapter1.html">Chapter 1</a></li>
-							<!-- <li><a href="chapter2.html">Chapter 2: Early History</a></li>
-							<li><a href="chapter3.html">Chapter 3: Key Figures</a></li>
+							<li><a href="morethenthis/chapter1.html">Chapter 1 pt 1</a></li>
+							<li><a href="morethenthis/chapter1inst2.html">Chapter 1 pt 2</a></li>
+							<!-- <li><a href="chapter3.html">Chapter 3: Key Figures</a></li>
 							<li><a href="chapter4.html">Chapter 4: Modern Developments</a></li> -->
 						</ul>
 					</div>
