--- a/watchlive2.html
+++ b/watchlive2.html
@@ -59,7 +59,7 @@
         // Function to load the HLS stream
         function loadHLSStream() {
             var video = document.getElementById("video-player");
-            var hlsUrl = "rtmp://jollyprinter.duckdns.org/live/stream1.m3u8"; // Replace with your HLS URL
+            var hlsUrl = "https://jollyprinter.duckdns.org/live/stream1.m3u8";
 
             if (Hls.isSupported()) {
                 var hls = new Hls();
@@ -81,7 +81,7 @@
 
         // Function to check if the stream is live
         function checkStreamStatus() {
-            fetch("http://jollyprinter.duckdns.org:8080/stat") // Replace with your Nginx RTMP stats page
+            fetch("https://jollyprinter.duckdns.org:80/stat") // Replace with your Nginx RTMP stats page
                 .then(response => response.text())
                 .then(data => {
                     if (data.includes("stream1")) { // Replace "stream1" with your stream key
