--- a/watchlive2.html
+++ b/watchlive2.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ridge Area SDA Church</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <!-- Add HLS.js for HLS stream support -->
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
 
@@ -34,12 +32,15 @@
         <h2>Watch the Video</h2>
         <!-- Video player container -->
         <div id="video-container">
-            <!-- Video player for HLS stream -->
-            <video id="video-player" width="800" height="600" controls autoplay muted>
-                <!-- Fallback video for when the stream is offline -->
-                <source src="images/ridgestreamoffline2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <!-- Owncast embed iframe -->
+            <iframe
+                src="http://jollyprinter.duckdns.org/embed/video"
+                width="800"
+                height="600"
+                frameborder="0"
+                allowfullscreen
+                autoplay>
+            </iframe>
         </div>
     </section>
 
@@ -54,52 +55,5 @@
             <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
     </footer>
-
-    <script>
-        // Function to load the HLS stream
-        function loadHLSStream() {
-            var video = document.getElementById("video-player");
-            var hlsUrl = "https://jollyprinter.duckdns.org/live/stream2.m3u8";
-
-            if (Hls.isSupported()) {
-                var hls = new Hls();
-                hls.loadSource(hlsUrl);
-                hls.attachMedia(video);
-                hls.on(Hls.Events.MANIFEST_PARSED, function () {
-                    video.play();
-                });
-            } else if (video.canPlayType("application/vnd.apple.mpegurl")) {
-                // Native HLS support (Safari)
-                video.src = hlsUrl;
-                video.addEventListener("loadedmetadata", function () {
-                    video.play();
-                });
-            } else {
-                console.error("HLS is not supported in this browser.");
-            }
-        }
-
-        // Function to check if the stream is live
-        function checkStreamStatus() {
-            fetch("https://jollyprinter.duckdns.org:443/stat") // Replace with your Nginx RTMP stats page
-                .then(response => response.text())
-                .then(data => {
-                    if (data.includes("stream1")) { // Replace "stream1" with your stream key
-                        loadHLSStream(); // Stream is live, load the HLS stream
-                    } else {
-                        console.log("Stream is offline.");
-                    }
-                })
-                .catch(error => {
-                    console.error("Error checking stream status:", error);
-                });
-        }
-
-        // Check stream status when the page loads
-        checkStreamStatus();
-
-        // Check stream status periodically (every 60 seconds)
-        setInterval(checkStreamStatus, 60000);
-    </script>
 </body>
 </html>
