Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   watchlive2.html

--- a/watchlive2.html
+++ b/watchlive2.html
@@ -34,7 +34,7 @@
         <div id="video-container">
             <!-- Owncast embed iframe -->
             <iframe
-                src="http://jollyprinter.duckdns.org/embed/video"
+                src="https://jollyprinter.duckdns.org/embed/video"
                 width="800"
                 height="600"
                 frameborder="0"
