Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html
	renamed:    watchlive2.html -> watchlive.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="watchlive2.html">Watch Live</a></li>
+											<li><a href="watchlive.html">Watch Live</a></li>
 											<li><a href="aboutus.html">About Us</a></li>
 											<li><a href="pastorscorner.html">Pastor's Corner</a></li>
 											<li><a href="morethanthis.html">More Than This</a></li>											
