Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   watchlive.html

--- a/watchlive.html
+++ b/watchlive.html
@@ -34,13 +34,15 @@
         <div id="video-container">
             <!-- Owncast embed iframe -->
             <iframe
-                src="https://jollyprinter.duckdns.org/embed/video"
-                width="800"
-                height="600"
-                frameborder="0"
-                allowfullscreen
-                autoplay>
-            </iframe>
+    src="https://jollyprinter.duckdns.org/embed/video?autoplay=1"
+    width="800"
+    height="600"
+    frameborder="0"
+    allowfullscreen
+    muted
+    autoplay>
+</iframe>
+
         </div>
     </section>
 
