Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 								<p>Every Thursday at 7 PM</p>
 							</li>
 							<li class="icon fa-paper">
-								<h3>Bulletin Announcements</h3>
-								<p>Please submit all bulletin announcements to the church secretary by Wednesday at 5 PM. Your timely submissions help us ensure that our weekly bulletin is comprehensive and up-to-date, keeping our congregation informed about upcoming events, important news, and special highlights within our church community. Thank you for your cooperation!</p>
+								<h3>Join us on Our Prayer Line</h3>
+								<p>Join us on our prayer line by calling 607-374-1189 and using access code 241108. This is a special opportunity to connect with others in faith and strengthen your spiritual journey. Through prayer and fellowship, we aim to bring ourselves closer to God and deepen our relationship with Him. Let’s come together in unity and seek His guidance and blessings.</p>
 							</li>
 						</ul>
 					</div>
