--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
 							</div>
 						</section>
 						<section class="spotlight">
+							<div class="image"><img src="images/ridgeflyer.png" alt="" /></div><div class="content">
+								<h2>Join us for Pentecost 2025</h2>
+								<p>Phone: 607-374-1189 </p>
+								<p>Access code: 241108</p>
+							</div>
+						</section>
+						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Verse of the Week</h2>
 								<h3>Proverbs 11:22</h3>
