Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   images/messiahmansion.png
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/ridgeflyer.png" alt="" /></div><div class="content">
-								<h2>Join us for Pentecost 2025</h2>
+							<div class="image"><img src="images/messiahmansion.png" alt="" /></div><div class="content">
+								<h2>Messiah's Mansion is Coming to Avon Park</h2>
 								<p>Phone: 607-374-1189 </p>
 								<p>Access code: 241108</p>
 							</div>
