Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/messiahmansion.png" alt="" /></div><div class="content">
 								<h2>Messiah's Mansion is Coming to Avon Park</h2>
-								<p>Phone: 607-374-1189 </p>
-								<p>Access code: 241108</p>
+								<p>Experience ancient history through this free tour of the Hebrew Tabernacle. </p>
+								<p>For more information click <a href="https://www.messiahsmansion.com/avonpark">Here</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
