Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 								<h2>Messiah's Mansion is Coming to Avon Park</h2>
 								<p>Experience ancient history through this free tour of the Hebrew Tabernacle. </p>
 								<p>For more information click <a href="https://www.messiahsmansion.com/avonpark">Here</a></p>
+								<p>For an indepth trailer of what you can expect on one of these tours click <a href="https://www.youtube.com/watch?v=JSISLylql4o">Here</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
