Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Verse of the Week</h2>
-								<h3>Proverbs 11:22</h3>
-								<p>"Like a gold ring in a pig’s snout is a beautiful woman who shows no discretion." </p>
+								<h3>Psalm 25:4-5</h3>
+								<p>"Show me your ways, O Lord, teach me your paths; guide me in your truth and teach me, for you are God my Savior, and my hope is in you all day long." </p>
 							</div>
 						</section>
 					</section>
