Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/ridgeflyer.png" alt="" /></div><div class="content">
 								<h2>Join us for Pentecost 2025</h2>
-								<p>Phone: 607-374-1189 </p>
-								<p>Access code: 241108</p>
+								<p>The cycle of evangelism is not meant to be a one-off, where we hold one event/series and then are done. Pentecost 2025 is about returning to the model Jesus and, later, the disciples used. </p>
+								<p>Pentecost 2025 shouldn’t end in 2025 but instead be a part of a transformation in our communities, churches, and relationships — a new way of engaging with the world.</p>
 							</div>
 						</section>
 						<section class="spotlight">
